--- a/modulePattern/index.html
+++ b/modulePattern/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="public/app.js"></script> <!---source app.js -->
-    <script src="public/makeSmiley.js"></script> <!---source exclaim.js --> 
+    <script src="public/makeSmiley.js"></script> <!---source makeSmiley.js --> 
   </head>
   <body></body>
 </html>
